packages/polymath-ui/src/components/Sidebar/style.scss
@import '~@polymathnetwork/ui/src/deprecated/styles/_variables.scss';

.pui-sidebar {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 20;
  width: 64px;
  height: 100%;
  padding-top: $navbar-height;
  background-color: $poly-blue;

  a {
    text-decoration: none;
  }

  ul:last-child {
    position: absolute;
    bottom: 40px;
  }

  li {
    width: 68px;
    height: 64px;
    margin-bottom: 2px;
    border-left: 8px solid transparent;
    margin-left: -4px;
    padding-top: 9px;
    text-align: center;

    &:hover:not(.disabled),
    &.active {
      background-color: rgba(61, 112, 178, 0.2);
      border-left-color: #5596e6;

      g {
        fill: #5596e6;
      }

      p {
        color: #5596e6;
      }
    }

    &.disabled {
      opacity: 0.5;
    }

    svg {
      display: inline-flex;
      height: 27px;
    }

    p {
      color: white;
      font-weight: 300;
      font-size: 11px;
      line-height: 18px;
      margin-top: -2px;
      letter-spacing: -0.2px;
    }
  }
}

